--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,8 +83,8 @@
         <div class="col-sm-10">
           <select class="form-control" name="boolean">
             <option>Choose the boolean ...</option>
-            <option value="1">True</option>
-            <option value="0">False</option>
+            <option value="true">True</option>
+            <option value="false">False</option>
           </select>
         </div>
       </div>
@@ -102,7 +102,7 @@
           <th scope="col">Float</th>
           <th scope="col">Date</th>
           <th scope="col">Boolean</th>
-          <th scope="col">Aksi</th>
+          <th scope="col">Action</th>
         </tr>
       </thead>
       <tbody>
